fixed z-index again

--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -601,9 +601,11 @@ html.modalset {
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     background: #fff;
+    font-family: ubuntu;
+    color: #000000;
     padding: 80px 40px;
     text-align: left;
-    background-color: #10ac84;
+    background-color: #00d8d6;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
